--- a/src/boodschappenlijstje-app/boodschappenlijstje/edit-boodschappenlijstje/editable-title/EditableTitle.scss
+++ b/src/boodschappenlijstje-app/boodschappenlijstje/edit-boodschappenlijstje/editable-title/EditableTitle.scss
@@ -4,3 +4,12 @@
   font-weight: bold;
   height: 74.875px;
 }
+
+.text-button {
+  text-decoration: underline;
+  cursor: pointer;
+
+  &:hover {
+    color: #6495ED;
+  }
+}
