--- a/src/boodschappenlijstje-app/boodschappenlijstjes-overview/BoodschappenlijstjesOverview.scss
+++ b/src/boodschappenlijstje-app/boodschappenlijstjes-overview/BoodschappenlijstjesOverview.scss
@@ -1,10 +1,13 @@
 .boodschappenlijstjes-overview {
+  &-new-list {
+    margin-bottom: 18px;
+  }
+
   &__text-button {
     text-decoration: underline;
   }
   &__clickable-text {
     cursor: pointer;
-    margin-bottom: 18px;
 
     &:hover {
       color: #6495ED;
